--- a/README
+++ b/README
@@ -7,4 +7,4 @@ Il y a quelques ajouts (fourmis de couleur) qui sont détaillés dans le rapport
 
 Aide :
 Les classes, l'héritage, les méthodes et les variables sont décrites dans la documentation générée avec doxygen. 
-Pour la consulter il faut allez dans /doc/ et ouvrir index.html avec votre navigateur internet.
+Pour la consulter il faut aller dans /doc/ et ouvrir index.html avec votre navigateur internet.
