--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 DE LEEUW Valérian & COUASNET Robin
-Fourmi de Langton
+Fourmis de Langton
 
 Principe :
 C'est une implémentation avec interface graphique en java, sur les fourmis de Langton.
